[package]
name = "wgpu-npo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.19.3" }
bytemuck = { version = "1.14", features = ["derive"] }
flume = "0.11"
pollster = "0.3"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "npo2_benchmark"
harness = false

